<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/med_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/small_gap"
            android:text="@string/med_name"
            android:textSize="@dimen/large_text"/>
<!--
        <Button
            android:id="@+id/delete_pill"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:background="@color/caution"
            android:text="@string/delete_pill"
            android:onClick="deletePill"/>
            -->
    </LinearLayout>

    <TextView
        android:id="@+id/dosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/gap_field"
        android:textSize="@dimen/med_text"
        android:text="@string/dosage_display" />

    <TextView
        android:id="@+id/food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/gap_field"
        android:textSize="@dimen/med_text"
        android:text="@string/take_with_food" />

    <TextView
        android:id="@+id/daysIntv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/gap_field"
        android:textSize="@dimen/med_text"
        android:text="@string/interval_display" />

    <TextView
        android:id="@+id/pill_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/gap_field"
        android:textSize="@dimen/med_text"
        android:text="00:00" />

</LinearLayout>