<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPill">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/med_name"
                android:inputType="text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_field"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/white"/>

            <TextView
                android:id="@+id/dosage_prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dosage_prompt"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/numDosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                <TextView
                    android:id="@+id/dosageDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/dosage_display"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                <Button
                    android:id="@+id/minusDosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:onClick="onMinusDosage"
                    android:text="@string/minus"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/plusDosage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:onClick="onPlusDosage"
                    android:text="@string/plus"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_field"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/white"/>

            <CheckBox
                android:id="@+id/take_with_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="rtl"
                android:text="@string/take_with_food"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_field"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/med_schedule"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/interval_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/interval_prompt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/numDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    <TextView
                        android:id="@+id/days_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="@string/interval_display"
                        android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                    <Button
                        android:id="@+id/minusDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:onClick="onMinusDay"
                        android:text="@string/minus"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/plusDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:onClick="onPlusDay"
                        android:text="@string/plus"
                        android:textSize="20sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gap_field"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white" />

                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Start"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                    android:onClick="onSetStart"/>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gap_field"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white" />

                <TextView
                    android:id="@+id/next_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gap_field"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/new_time_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onAdd"
                    android:text="@string/add"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <LinearLayout
                    android:id="@+id/more_time"
                    android:layout_width="344dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="352dp"></LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_field"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="265dp"
                android:background="?android:attr/listDivider"
                android:backgroundTint="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white"/>

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:background="@color/caution"
                    android:onClick="onCancel"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white"/>

                <Button
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:onClick="onSave"
                    android:text="@string/save"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="?android:attr/listDivider"
                    android:backgroundTint="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_field"
                android:layout_weight="1"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="265dp"
                android:backgroundTint="@color/white"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:onClick="onClear"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>